<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>za.ac.nwu</groupId>
	<artifactId>kmm</artifactId>
	<version>5.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>KFS Store Management</name>
	<inceptionYear>2012</inceptionYear>
	<modules>
	   <module>api</module>
	   <module>b2b</module>
	   <module>config</module>
	   <module>web</module>
	</modules>

	<prerequisites>
		<maven>3.0.4</maven>
	</prerequisites>
	<properties>
		<!--DEPENDENCIES-->
		<rice.version>2.1.2-NWU-SNAPSHOT</rice.version>
		<kfs-foundation-core.version>5.0.1-SNAPSHOT</kfs-foundation-core.version>
		<ojdbc6.version>11.2.0.2</ojdbc6.version>
		<mysql-connector-java.version>5.1.16</mysql-connector-java.version>

		<!--PLUGIN VERSIONS-->
		<maven-clean-plugin.version>2.5</maven-clean-plugin.version>
		<maven-resources-plugin.version>2.5</maven-resources-plugin.version>
		<maven-war-plugin.version>2.3</maven-war-plugin.version>
		<maven-jetty-plugin.version>8.1.5.v20120716</maven-jetty-plugin.version>

		<!--BUILD TIME FILTER PROPERTIES-->
		<shop.guest.user>shopguest</shop.guest.user>

		<build.environment.setting>dev</build.environment.setting>
		<filter.directory>${basedir}/src/main/filters</filter.directory>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>za.ac.nwu</groupId>
				<artifactId>kmm-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>za.ac.nwu</groupId>
				<artifactId>kmm-b2b</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>za.ac.nwu</groupId>
				<artifactId>kmm-config</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>edu.msu.ais</groupId>
				<artifactId>sentinel-client</artifactId>
				<version>1.0</version>
			</dependency>
			<dependency>
				<groupId>jasperreports</groupId>
				<artifactId>jasperreports</artifactId>
				<version>2.0.4</version>
				<exclusions>
					<exclusion>
						<artifactId>spring-security-core</artifactId>
						<groupId>org.springframework.security</groupId>
					</exclusion>
					<exclusion>
						<artifactId>xercesImpl</artifactId>
						<groupId>xerces</groupId>
					</exclusion>
					<exclusion>
						<artifactId>guava</artifactId>
						<groupId>com.google.guava</groupId>
					</exclusion>
					<exclusion>
						<artifactId>commons-beanutils</artifactId>
						<groupId>commons-beanutils</groupId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.kuali.rice</groupId>
				<artifactId>rice-core-api</artifactId>
				<version>${rice.version}</version>
			</dependency>
			<dependency>
				<groupId>org.kuali.rice</groupId>
				<artifactId>rice-krad-web-framework</artifactId>
				<version>${rice.version}</version>
			</dependency>
			<dependency>
				<groupId>org.kuali.rice</groupId>
				<artifactId>rice-core-framework</artifactId>
				<version>${rice.version}</version>
			</dependency>
			<dependency>
				<groupId>org.kuali.rice</groupId>
				<artifactId>rice-krad-app-framework</artifactId>
				<version>${rice.version}</version>
			</dependency>
			<dependency>
				<groupId>org.kuali.rice</groupId>
				<artifactId>rice-kns</artifactId>
				<version>${rice.version}</version>
			</dependency>
			<dependency>
				<groupId>org.kuali.rice</groupId>
				<artifactId>rice-client-contrib</artifactId>
				<version>${rice.version}</version>
			</dependency>
			<dependency>
				<groupId>org.kuali.rice</groupId>
				<artifactId>rice-impl</artifactId>
				<version>${rice.version}</version>
			</dependency>
			<dependency>
				<groupId>org.kuali.rice</groupId>
				<artifactId>rice-web</artifactId>
				<version>${rice.version}</version>
				<scope>provided</scope>
				<type>war</type>
			</dependency>
			<dependency>
				<groupId>za.ac.nwu</groupId>
				<artifactId>kfs-foundation-core</artifactId>
				<version>${kfs-foundation-core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.lucene</groupId>
				<artifactId>lucene-core</artifactId>
				<version>3.0.2</version>
			</dependency>
			<dependency>
				<groupId>commons-cli</groupId>
				<artifactId>commons-cli</artifactId>
				<version>1.2</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-remoting</artifactId>
				<version>2.0.8</version>
			</dependency>
			<dependency>
				<groupId>com.lowagie</groupId>
				<artifactId>itext</artifactId>
				<version>2.1.7</version>
			</dependency>
			<dependency>
				<groupId>cas</groupId>
				<artifactId>cas</artifactId>
				<version>2.0.12</version>
			</dependency>
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>${mysql-connector-java.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.0</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<!--<plugin>-->
				<!--<groupId>org.zeroturnaround</groupId>-->
				<!--<artifactId>jrebel-maven-plugin</artifactId>-->
				<!--<version>${jrebel-maven-plugin.version}</version>-->
				<!--<executions>-->
				<!--<execution>-->
				<!--<id>generate-rebel-xml</id>-->
				<!--<goals>-->
				<!--<goal>generate</goal>-->
				<!--</goals>-->
				<!--<phase>${jrebel.phase}</phase>-->
				<!--</execution>-->
				<!--</executions>-->
				<!--</plugin>-->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.5.1</version>
					<configuration>
						<source>1.6</source>
						<target>1.6</target>
						<encoding>iso-8859-1</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>${maven-clean-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.mortbay.jetty</groupId>
					<artifactId>jetty-maven-plugin</artifactId>
					<version>${maven-jetty-plugin.version}</version>
					<dependencies>
						<dependency>
							<groupId>${driver.groupId}</groupId>
							<artifactId>${driver.artifactId}</artifactId>
							<version>${driver.version}</version>
							<scope>runtime</scope>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>${maven-war-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.12</version>
					<configuration>
						<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.4</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>mysql</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<driver.groupId>mysql</driver.groupId>
				<driver.artifactId>mysql-connector-java</driver.artifactId>
				<driver.version>${mysql-connector-java.version}</driver.version>
			</properties>
		</profile>
		<profile>
			<id>oracle</id>
			<properties>
				<driver.groupId>com.oracle</driver.groupId>
				<driver.artifactId>ojdbc6</driver.artifactId>
				<driver.version>${ojdbc6.version}</driver.version>
			</properties>
		</profile>
		<profile>
			<id>dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<build.environment.setting>dev</build.environment.setting>
			</properties>
		</profile>
		<profile>
			<id>release</id>
			<properties>
				<build.environment.setting>prd</build.environment.setting>
			</properties>
		</profile>
	</profiles>
</project>
